# chino-python

./: .coverage  .gitignore  .travis.yml  Makefile  PopupNotification.vbs  README.md  README.rst  conf.py  docs.rst  index.rst  install.rst  license.txt  logging.conf  perofmances.py  requirements.txt  setup.cfg  setup.py  test.bat  test.sh  tests.py
chino/: __init__.py  api.py  exceptions.py  logging.conf  objects.py
test/: __init__.py  cfg.py  cfg_base.py  consent_data.py  logging.conf  outtest.sh  test.bat  tests_chino.py
