[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
[bdist_wheel]
universal=0

[metadata]
name = chino

author = Stefano Tranquillini

author_email = stefano@chino.io

summary = Wrapper for Chino.io API

license = MIT

description-file =
    README.rst

home-page = https://www.chino.io

project_urls =
    Source Code = https://github.com/chinoio/chino-python/

classifier =
    "Topic :: Software Development",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",

[files]
packages = chino
package_data=
         chino = logging.conf
